; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ess/extr_ess_lib.c_ESS_SIGNING_CERT_V2_add.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ess/extr_ess_lib.c_ESS_SIGNING_CERT_V2_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ESS_F_ESS_SIGNING_CERT_V2_ADD = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4
@NID_id_smime_aa_signingCertificateV2 = common dso_local global i32 0, align 4
@V_ASN1_SEQUENCE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ESS_SIGNING_CERT_V2_add(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* null, i32** %6, align 8
  store i8* null, i8** %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @i2d_ESS_SIGNING_CERT_V2(i32* %10, i8** null)
  store i32 %11, i32* %9, align 4
  %12 = load i32, i32* %9, align 4
  %13 = call i8* @OPENSSL_malloc(i32 %12)
  store i8* %13, i8** %8, align 8
  %14 = icmp eq i8* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %2
  %16 = load i32, i32* @ESS_F_ESS_SIGNING_CERT_V2_ADD, align 4
  %17 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %18 = call i32 @ESSerr(i32 %16, i32 %17)
  br label %43

19:                                               ; preds = %2
  %20 = load i8*, i8** %8, align 8
  store i8* %20, i8** %7, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @i2d_ESS_SIGNING_CERT_V2(i32* %21, i8** %7)
  %23 = call i32* (...) @ASN1_STRING_new()
  store i32* %23, i32** %6, align 8
  %24 = icmp eq i32* %23, null
  br i1 %24, label %31, label %25

25:                                               ; preds = %19
  %26 = load i32*, i32** %6, align 8
  %27 = load i8*, i8** %8, align 8
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @ASN1_STRING_set(i32* %26, i8* %27, i32 %28)
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %35, label %31

31:                                               ; preds = %25, %19
  %32 = load i32, i32* @ESS_F_ESS_SIGNING_CERT_V2_ADD, align 4
  %33 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %34 = call i32 @ESSerr(i32 %32, i32 %33)
  br label %43

35:                                               ; preds = %25
  %36 = load i8*, i8** %8, align 8
  %37 = call i32 @OPENSSL_free(i8* %36)
  store i8* null, i8** %8, align 8
  %38 = load i32*, i32** %4, align 8
  %39 = load i32, i32* @NID_id_smime_aa_signingCertificateV2, align 4
  %40 = load i32, i32* @V_ASN1_SEQUENCE, align 4
  %41 = load i32*, i32** %6, align 8
  %42 = call i32 @PKCS7_add_signed_attribute(i32* %38, i32 %39, i32 %40, i32* %41)
  store i32 %42, i32* %3, align 4
  br label %48

43:                                               ; preds = %31, %15
  %44 = load i32*, i32** %6, align 8
  %45 = call i32 @ASN1_STRING_free(i32* %44)
  %46 = load i8*, i8** %8, align 8
  %47 = call i32 @OPENSSL_free(i8* %46)
  store i32 0, i32* %3, align 4
  br label %48

48:                                               ; preds = %43, %35
  %49 = load i32, i32* %3, align 4
  ret i32 %49
}

declare dso_local i32 @i2d_ESS_SIGNING_CERT_V2(i32*, i8**) #1

declare dso_local i8* @OPENSSL_malloc(i32) #1

declare dso_local i32 @ESSerr(i32, i32) #1

declare dso_local i32* @ASN1_STRING_new(...) #1

declare dso_local i32 @ASN1_STRING_set(i32*, i8*, i32) #1

declare dso_local i32 @OPENSSL_free(i8*) #1

declare dso_local i32 @PKCS7_add_signed_attribute(i32*, i32, i32, i32*) #1

declare dso_local i32 @ASN1_STRING_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
